sass/_layout.scss
.container{
    margin: 225px 18% 250px 18%;
    display: flex;
    flex-direction: column;
    align-items: center;
    
    h4 {
        margin: 15px 0;
    }

    .menu{
        margin: 0 20px;
    }
}

footer{
    text-align: center;
    display: flex;
    flex-direction: row;
    justify-content: center;

    .footerText {
        margin: 0 0 0 3px;
        text-transform: uppercase;
    }
}

.newsContainer {
    display:grid;
    grid-template-rows: repeat(12, 300px);
}


//TABLET
@media only screen and (min-width:600px) { 

    .container{
        margin: 250px 9%;
        display: grid;
        grid-gap: 0px;
        grid-template-areas:
        "img div . . . . . . . .";

        menu{
            margin: 0 0;
        }
    }

    .newsContainer {
        grid-template-columns: repeat(3, minmax(310px,100px));
        grid-template-rows: repeat(4, 300px);
    }
    
}

//DESKTOP VIEW
@media only screen and (min-width:1240px) {
    .container{
        margin-left: 3%;
        grid-template-areas:
        "img div . . . . . . . . ";
    } 
    footer{
        margin: 8% 10% 5% 3%;
        padding-top: 25px;
        text-align: left;
        justify-content: flex-start;
    }
    .newsContainer{
        grid-template-columns: repeat(4, minmax(310px,100px));
        grid-template-rows: repeat(3, 300px);
    }
}

